@@ -13183,8 +13183,8 @@ test/test_leak.py
 test/test_mating.py
 test/test_migration.py
 test/test_misc.py
-test/test_mutate.py
 test/test_mutationDriftEquilibrium.py
+test/test_mutator.py
 test/test_operator.py
 test/test_param.py
 test/test_penetrance.py
