@@ -208,7 +208,7 @@ DATA_FILES =  [
   ('share/simuPOP/test', glob.glob('test/test_*.py')),
   ('share/simuPOP/misc', ['misc/README', 'misc/python-mode.el', 'misc/emacs-python.el']),
   ('share/simuPOP/scripts', ['scripts/simuComplexDisease.py',  
-   'scripts/simuLDDecay.py', 'scripts/simuCDCV.py']),
+   'scripts/simuLDDecay.py', 'scripts/simuCDCV.py', 'scripts/simuRecHotSpot.py']),
 ]
 
 if XML_SUPPORT: # using serialization library with xml support
